# code-social

./: .gitignore  README.md  spin.toml
profile-api/: Cargo.toml
profile-api/src/: config.rs  lib.rs  model.rs  utils.rs
scripts/: create-profile.json  update-profile.json  validate.sh
scripts/db/: up.sh
scripts/db/initdb.d/: 1_create_table_profile.sql
scripts/db/scripts/db/data/: postmaster.pid
scripts/db/scripts/db/data/base/1/: 2619  pg_internal.init
scripts/db/scripts/db/data/base/16384/: 1247  1249  1249_vm  1259  16389  16392  16394  2579  2606  2608  2610  2619  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  pg_internal.init
scripts/db/scripts/db/data/base/5/: 2619  pg_internal.init
scripts/db/scripts/db/data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
web/: README.md  package-lock.json  package.json
