[package]
name = "profile-api"
authors = ["ārXāngēl <lavrenyk@gmail.com>"]
description = "Profile api components"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "2.2.0"
bytes = { version = "1.5.0", features = [] }
http = "1.0.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
wit-bindgen-rust = "0.18.0"


[workspace]
